chapter_envoy-gateway/manifests/backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: envoy-gateway-handson
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "app.envoy-gateway.example.com"
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: httpbin
      matches:
        - path:
            type: PathPrefix
            value: /
