chapter_envoy-gateway/manifests/httproute-header.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route-header
  namespace: envoy-gateway-handson
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "app.envoy-gateway.example.com"
  rules:
    - backendRefs:
        - name: app-v2
          port: 8080
      matches:
        - headers:
            - name: x-version
              value: canary
    - backendRefs:
        - name: app-v1
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
